--- a/01_Data_Collection_and_Preparation.ipynb
+++ b/01_Data_Collection_and_Preparation.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyDd3bVeyDlv1UJC0A-WOKYnM1atuv-JYAk'\n",
+    "api_key = 'Your API Key here'\n",
     "channel_ids = ['UCNyxrRXa3PvyJYuFP51iU-Q', 'UC6uX6GF5q2JxLjMkyivM2Og', 'UC_F4Iy5korq2mEWZDQhG07w', 'UCmzxts0YGES5tN-oJ9abTQg',\n",
     "               'UCo_q6aOlvPH7M-j_XGWVgXg', 'UCeYue9Nbodzg3T1Nt88E3fg', 'UCBAtiokiAR1D320knY_yXyQ', 'UC4qa5EroJxnQM6Sng9WhgsQ' ]\n",
     "youtube = build('youtube', 'v3', developerKey=api_key)\n"
