--- a/01_Data_Collection_and_Preparation.ipynb
+++ b/01_Data_Collection_and_Preparation.ipynb
@@ -5,7 +5,7 @@
    "id": "0b1b777f-68fc-400a-99ee-f21c4c01c92e",
    "metadata": {},
    "source": [
-    "## YouTube Channel Analytics Project"
+    "# YouTube Channel Analytics Project"
    ]
   },
   {
